[package]
name = "bevy_tiled_prototype"
description = "A plugin for rendering tiled maps."
version = "0.2.2"
authors = ["John Mitchell", "Daniel Taub<dmtaub@gmail.com>", "Rob Parrett<robparrett@gmail.com>"]
homepage = "https://github.com/StarArawn/bevy_tiled"
repository = "https://github.com/StarArawn/bevy_tiled"
license-file = "LICENSE"
edition = "2018"
exclude = [
    "assets/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "c3a72e9dc85b53a1448138270c72e806fc91ec85" }
#tiled = "0.9"
tiled = { git = "https://github.com/mattyhall/rs-tiled", branch = "master" }
