[package]
name = "bevy_tiled_prototype"
description = "A plugin for rendering tiled maps."
version = "0.2.4"
authors = ["John Mitchell", "Daniel Taub<dmtaub@gmail.com>", "Rob Parrett<robparrett@gmail.com>"]
homepage = "https://github.com/StarArawn/bevy_tiled"
repository = "https://github.com/StarArawn/bevy_tiled"
license-file = "LICENSE"
edition = "2018"
exclude = [
    "assets/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

default = [
    "bevy/bevy_wgpu",
    "bevy/bevy_winit",
    "bevy/png",
    "bevy/render",
]

web = [
    "bevy/bevy_winit",
    "bevy/render",
]

[dependencies]
anyhow = "1.0"
bevy = { version = "0.5" }
bevy_ecs_tilemap = { git="https://github.com/StarArawn/bevy_ecs_tilemap", rev="50ec3c12c68079cf0d624e4dcade349351c3ae6c" }
log = "0.4"
tiled = { version = "0.9", default-features = false }

[dev-dependencies]
env_logger = "0.8"
